# stm32-cmake-libopencm3

./: .gitmodules  CMakeLists.txt  Makefile
cmake/: opencm3-config.cmake
scripts/: irq2nvic_h.py
targets/: stm32f1.cmake
